<resources>
    <string name="app_name">丝路旅游</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">首页</string>
    <string name="mine">个人中心</string>
    <string name="cart">购物车</string>
    <string name="find">发现</string>
    <string name="takephoto_erro">无法访问设备，请使用其他客户端重新尝试</string>
    <string name="shopping">购物</string>
    <string name="mine_obligation">待付款</string>
    <string name="mine_transport">待收货</string>
    <string name="mine_order">我的订单</string>
    <string name="mine_order_share">待评价</string>
    <string name="mine_collect">我的收藏</string>
    <string name="mine_attention">我的关注</string>
    <string name="mine_talks">我的说说</string>
    <string name="mine_addr">收货地址</string>
    <string name="mine_about">关于我们</string>
    <string name="mine_service">联系客服</string>
    <string name="brand">品牌</string>
    <string name="reset">清空筛选</string>
    <string name="confirm">确定</string>
    <string name="goods_detail">商品详情</string>
    <string name="goods_test_name">吐鲁番大瓜子香腰果可口干果葡萄干哈密瓜干蓝莓干500g大甩卖</string>

</resources>
