<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginLeft="@dimen/base_margin"
        android:gravity="center_vertical"
        android:text="@string/brand"
        android:textColor="@color/text_color_black"
        android:textSize="15sp"/>

    <include layout="@layout/partline_line"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/brand_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="@dimen/base_margin"/>

    <LinearLayout
        android:id="@+id/bottom_ll"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/reset_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/partline_space"
            android:gravity="center"
            android:text="@string/reset"
            android:textColor="@color/text_color_gray"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/confirm_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/text_orange"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="18sp"/>
    </LinearLayout>

</LinearLayout>
